--- a/client/package.json
+++ b/client/package.json
@@ -2,40 +2,38 @@
 	"name": "client",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
-		"package": "svelte-kit package",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"clear": "rm -rf .svelte-kit build"
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier -w .",
+		"clean": "rm -rf .svelte-kit build"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.23.3",
-		"@sveltejs/adapter-auto": "1.0.0-next.58",
-		"@sveltejs/adapter-static": "1.0.0-next.35",
-		"@sveltejs/kit": "1.0.0-next.372",
-		"@types/lodash": "^4.14.182",
-		"@typescript-eslint/eslint-plugin": "^5.30.6",
-		"@typescript-eslint/parser": "^5.30.6",
-		"autoprefixer": "^10.4.7",
-		"eslint": "^8.19.0",
+		"@playwright/test": "^1.27.1",
+		"@sveltejs/adapter-auto": "1.0.0-next.84",
+		"@sveltejs/adapter-static": "1.0.0-next.46",
+		"@sveltejs/kit": "1.0.0-next.525",
+		"@types/lodash": "^4.14.186",
+		"@typescript-eslint/eslint-plugin": "^5.41.0",
+		"@typescript-eslint/parser": "^5.41.0",
+		"autoprefixer": "^10.4.12",
+		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.18",
 		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.0",
+		"svelte": "^3.52.0",
+		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.6",
+		"tailwindcss": "^3.2.1",
 		"tslib": "^2.4.0",
-		"typescript": "~4.7.4",
-		"vite": "^3.0.0"
+		"typescript": "~4.8.4",
+		"vite": "^3.2.0"
 	},
 	"type": "module",
 	"dependencies": {
