--- a/client/package.json
+++ b/client/package.json
@@ -10,30 +10,30 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier -w .",
-		"clean": "rm -rf .svelte-kit build"
+		"sweep": "rm -rf .svelte-kit build"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.27.1",
-		"@sveltejs/adapter-auto": "1.0.0-next.84",
-		"@sveltejs/adapter-static": "1.0.0-next.46",
-		"@sveltejs/kit": "1.0.0-next.525",
-		"@types/lodash": "^4.14.186",
-		"@typescript-eslint/eslint-plugin": "^5.41.0",
-		"@typescript-eslint/parser": "^5.41.0",
-		"autoprefixer": "^10.4.12",
-		"eslint": "^8.26.0",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "1.0.0-next.90",
+		"@sveltejs/adapter-static": "1.0.0-next.48",
+		"@sveltejs/kit": "1.0.0-next.572",
+		"@types/lodash": "^4.14.191",
+		"@typescript-eslint/eslint-plugin": "^5.45.1",
+		"@typescript-eslint/parser": "^5.45.1",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.18",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
-		"svelte": "^3.52.0",
-		"svelte-check": "^2.9.2",
+		"postcss": "^8.4.19",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.53.1",
+		"svelte-check": "^2.10.1",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.1",
-		"tslib": "^2.4.0",
-		"typescript": "~4.8.4",
-		"vite": "^3.2.0"
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "~4.9.3",
+		"vite": "^3.2.5"
 	},
 	"type": "module",
 	"dependencies": {
