--- a/client/package.json
+++ b/client/package.json
@@ -14,26 +14,26 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "1.0.0-next.90",
-		"@sveltejs/adapter-static": "1.0.0-next.48",
-		"@sveltejs/kit": "1.0.0-next.572",
+		"@sveltejs/adapter-auto": "1.0.0",
+		"@sveltejs/adapter-static": "1.0.0",
+		"@sveltejs/kit": "1.0.0",
 		"@types/lodash": "^4.14.191",
-		"@typescript-eslint/eslint-plugin": "^5.45.1",
-		"@typescript-eslint/parser": "^5.45.1",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.19",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.10.1",
-		"svelte-preprocess": "^4.10.7",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.2",
+		"svelte-preprocess": "^5.0.0",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "~4.9.3",
-		"vite": "^3.2.5"
+		"typescript": "~4.9.4",
+		"vite": "^4.0.1"
 	},
 	"type": "module",
 	"dependencies": {
