--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
   },
   "python.linting.enabled": true,
   "python.formatting.provider": "black",
-  "isort.args": ["--profile", "black"]
+  "isort.args": ["--profile", "black"],
 }
