--- a/api/Makefile
+++ b/api/Makefile
@@ -4,7 +4,13 @@ format:
 	isort src tests
 
 dev:
-	flask run --with-threads
+	flask run --port=8000 --with-threads
+
+deps:
+	poetry export --without-hashes > requirements.txt
 
 build:
-	poetry export --without-hashes > requirements.txt
+	docker build -t etrnal-api .
+
+docker:
+	docker run -p 8000:8000 etrnal-api
