--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,7 +13,7 @@ beautifulsoup4 = "^4.11.1"
 flask-apispec = "^0.11.1"
 furl = "^2.1.3"
 glom = "^22.1.0"
-gql = {extras = ["all"], version = "^3.2.0"}
+gql = { extras = ["all"], version = "^3.2.0" }
 gunicorn = "^20.1.0"
 httpx = "^0.22.0"
 lxml = "^4.8.0"
@@ -31,9 +31,7 @@ pytest = "^7.1.2"
 [tool.pytest.ini_options]
 addopts = "-s"
 minversion = "6.0"
-testpaths = [
-  "tests",
-]
+testpaths = ["tests"]
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
