--- a/client/package.json
+++ b/client/package.json
@@ -13,30 +13,32 @@
 		"sweep": "rm -rf .svelte-kit build"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "1.0.0",
-		"@sveltejs/adapter-static": "1.0.0",
-		"@sveltejs/kit": "1.0.0",
-		"@types/lodash": "^4.14.191",
-		"@typescript-eslint/eslint-plugin": "^5.46.1",
-		"@typescript-eslint/parser": "^5.46.1",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.29.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@playwright/test": "^1.33.0",
+		"@sveltejs/adapter-auto": "2.0.1",
+		"@sveltejs/adapter-static": "2.0.2",
+		"@sveltejs/kit": "1.15.9",
+		"@types/lodash": "^4.14.194",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.20",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.55.0",
-		"svelte-check": "^2.10.2",
-		"svelte-preprocess": "^5.0.0",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.4.1",
-		"typescript": "~4.9.4",
-		"vite": "^4.0.1"
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.0",
+		"prettier-plugin-tailwindcss": "^0.2.7",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.5.0",
+		"typescript": "~5.0.4",
+		"vite": "^4.3.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.0.0",
 		"lodash": "^4.17.21"
 	}
 }
